Fixed artist-song text overflow.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -192,7 +192,7 @@ body {
   text-overflow: ellipsis;
   margin-bottom: 0px;
   font-size: 24px;
-  width: 95%;
+  width: 300px;
 }
 
 .artist {
